--- a/PokemonGo/RocketAPI/Console/App.config
+++ b/PokemonGo/RocketAPI/Console/App.config
@@ -17,7 +17,7 @@
     <add key="PtcUsername" value="username" />
     <add key="PtcPassword" value="pw" />
     <add key="GoogleRefreshToken" value="" />
-    <add key="DefaultLatitude" value="48.398358" />
+    <add key="DefaultLatitude" value="53.4832697" />
     <!--Default Amsterdam Central Station-->
     <add key="DefaultLongitude" value="13.436663" />
     <!--Default Amsterdam Central Station-->
@@ -29,7 +29,7 @@
     <!--Recycle Time in seconds-->
     <add key="TransferType" value="none" />
     <!--none/cp/leaveStrongest/duplicate/all Whitelists/blackslists for each type is in Program.cs-->
-    <add key="TransferCPThreshold" value="0" />
+    <add key="TransferCPThreshold" value="390" />
     <!--transfer pokemon with CP less than this value if cp transfer type is selected. Whitelist in Program.cs-->
     <add key="EvolveAllGivenPokemons" value="false" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
